--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homeworks</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -15,8 +15,8 @@
     <header class="header">
         <h1>Homeworks!!</h1>
         <div class="head-info">
-            <span class="wpp"><img src="/img/whatsapp.png" alt="whatsapp">+57 3144224966</span>
-            <span class="correo"><img src="/img/correo-electronico.png" alt="correo-electronico">dllanessuarez@gmail.com</span>
+            <span class="wpp"><img src="./img/whatsapp.png" alt="whatsapp">+57 3144224966</span>
+            <span class="correo"><img src="./img/correo-electronico.png" alt="correo-electronico">dllanessuarez@gmail.com</span>
         </div>
     </header>
 
@@ -49,7 +49,7 @@
             </div>
 
             <div class="img-home"> 
-                <span><img src="/img/home.png" alt="Homewroks"></span>
+                <span><img src="./img/home.png" alt="Homewroks"></span>
             </div>
            
         </div>
@@ -58,7 +58,7 @@
             <div class="flip-card-what">
                 <div class="wflip-card-inner">
                   <div class="wflip-card-front">
-                    <img src="/img/to-do-list.png" alt="Avatar" style="width:300px;height:300px;">
+                    <img src="./img/to-do-list.png" alt="to-do-list" style="width:300px;height:300px;">
                   </div>
                   <div class="wflip-card-back">
                     <h1>What we do</h1>
@@ -75,7 +75,7 @@
             <div class="flip-card-how">
                 <div class="hflip-card-inner">
                   <div class="hflip-card-front">
-                    <img src="/img/question (1).png" alt="Avatar" style="width:300px;height:300px;">
+                    <img src="./img/question (1).png" alt="Boy is thinking" style="width:300px;height:300px;">
                   </div>
                   <div class="hflip-card-back">
                     <h1>How we help</h1>
