--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
 <body>
 
     <header class="header">
-        <h1>Homeworks!!</h1>
-        <div class="head-info">
-            <span class="wpp"><img src="./img/whatsapp.png" alt="whatsapp">+57 3144224966</span>
-            <span class="correo"><img src="./img/correo-electronico.png" alt="correo-electronico">dllanessuarez@gmail.com</span>
-        </div>
+        <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
+            <a href="#" class="enlace">
+                <h1 class="logo">Homeworks!!</h1>
+            </a>
+            <ul>
+                <li ><a href="#" class="active">Home</a></li>
+                <li ><a href="#flip-card-what">What we do</a></li>
+                <li><a href="#flip-card-how">How we help</a></li>
+                <li><a href="#get">Get a quote</a></li>
+                <li><a href="#">Frequent questions</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <nav class="menu">
-        <a href="#">Home</a>
-	    <a href="#">What we do</a>
-	    <a href="#">How we help</a>
-	    <a href="#">Get a quote</a>
-	    <a href="#">Frequent questions</a>
-        <div class="animation start-home"></div>
-    </nav>
+
 
     <div class="content">
 
@@ -44,7 +48,7 @@
                     <span>Assign your tasks and jobs while enjoying your free time</span>
                 </div>
                 <div class="btn-home">
-                    <a href="#">Get a quote</a>
+                    <a href="#get">Get a quote</a>
                 </div>
             </div>
 
@@ -55,7 +59,7 @@
         </div>
 
         <div class="Ws">
-            <div class="flip-card-what">
+            <div class="flip-card-what" id="flip-card-what">
                 <div class="wflip-card-inner">
                   <div class="wflip-card-front">
                     <img src="./img/to-do-list.png" alt="to-do-list" style="width:300px;height:300px;">
@@ -72,22 +76,50 @@
                   </div>
                 </div>
             </div>
-            <div class="flip-card-how">
+            <div class="flip-card-how" id="flip-card-how">
                 <div class="hflip-card-inner">
                   <div class="hflip-card-front">
                     <img src="./img/question (1).png" alt="Boy is thinking" style="width:300px;height:300px;">
                   </div>
                   <div class="hflip-card-back">
                     <h1>How we help</h1>
-                    <p>Architect & Engineer</p>
-                    <p>We love that guy</p>
+                    <p>we do all kinds of homework <strong>online</strong></p> 
+                    <h3>Drafting</h3>
+                    <p>(essays, appreciations, abstracts, thesis)</p>
+                    <h3>Exercise solution</h3>
+                    <p>(activities, issues, exercises)</p>
+                    <h3>Presentations</h3>
+                    <p>(Power Point, Prezi)</p>
                   </div>
                 </div>
             </div>
         </div>
-        <div class="get">Get a quote</div>
+        <div class="get" id="get">
+            <form action="" class="form" method="post" enctype="multipart/form-data" id="formUp">
+                <h1 class="form_title">Get a quote</h1>
+                <div class="container-50">
+                    <label for="" class="form_label">Name</label>
+                    <input type="text" class="form_input" name="Name" required>
+                </div>
+                <div class="container-50">
+                    <label for="" class="form_label">Email</label>
+                    <input type="email" class="form_input" name="Email" required>
+                </div>
+                <div class="container-area">
+                    <label for="" class="form_label">Homework description</label>
+                    <textarea name="descriptions" wrap="soft" cols="60" rows="7" aria-required="true" aria-invalid="false" placeholder="Add a description or comment. Remember that a detailed description will reduce the quote time." class="textArea-description"></textarea>
+                </div>
+                <div class="container-file">
+                    <input type="text" placeholder="Search" id="fileText" class="file_txt" readonly>
+                    <label for="inputFile" class="form_file-btn">&#128194; Upload</label>
+                    <input type="file" class="form_file" name="inputFile" id="inputFile" required>
+                    
+                </div>
+                <progress id="progressBar" value="0" max="100" class="progressBar"></progress>
+                <input type="submit" class="form_submit" value="Send">
+            </form>
+        </div>
         <div>Frequents questions</div>
-        <div>Card</div>
     </div>
     <footer class="footer">Footer</footer>
 
