Cambié fondo e hice pequeños arreglos

--- a/index.html
+++ b/index.html
@@ -119,7 +119,31 @@
                 <input type="submit" class="form_submit" value="Send" onclick="getValuesForm()">
             </form>
         </div>
-        <div>Frequents questions</div>
+        <div class="questions">
+            <h1>Frequent questions</h1>
+            <ul>
+                <li>
+                    <a href="#q1">Question 1 </a>
+                    <p id="q1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus neque recusandae ipsum possimus vitae? Blanditiis minima ex ipsum, fugit ea vitae esse iusto quis, quidem quia fugiat earum, recusandae enim.</p>
+                </li>
+                <li>
+                    <a href="#q2">Question 2</a>
+                    <p id="q2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sint possimus optio architecto nulla explicabo provident ab nostrum, quae, earum nobis vel natus molestiae quia laudantium dolor iusto quaerat ut.</p>
+                </li>
+                <li>
+                    <a href="#q3">Question 3</a>
+                    <p id="q3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam perspiciatis dolore architecto quibusdam facere quae voluptates modi ad rem aspernatur! Atque quidem maiores quod molestiae voluptates pariatur minima. Cum, debitis.</p>
+                </li>
+                <li>
+                    <a href="#q4">Question 4</a>
+                    <p id="q4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odio, unde est quas, rerum debitis tempore corrupti quis placeat recusandae repellendus praesentium amet. Numquam ratione non possimus. Aperiam, assumenda sapiente?</p>
+                </li>
+                <li>
+                    <a href="#q5">Question 5</a>
+                    <p id="q5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolor, ratione voluptatum doloremque commodi sit asperiores nobis nulla similique alias enim excepturi ut, debitis ducimus modi quaerat temporibus recusandae laborum.</p>
+                </li>
+            </ul>
+        </div>
     </div>
     <footer class="footer">Footer</footer>
     <script src="./js/index.js"></script>
